assets/scss/custom.scss
@charset "UTF-8";

/*************************************************
 *  Alumni Table
 **************************************************/

table {
  overflow-x: auto !important;
  width: auto !important;
}
@media (min-width: 991.98px) {
  table.table-sm th,
  table.table-sm td {
    padding-left: 14px !important;
    padding-right: 14px !important;
  }
}

.bg-table-primary {
  background-color: $sta-primary;
}

hr {
  background: #ccc;
}

thead {
  background-color: $sta-primary;
  color: white;
}

.research-line-header {
  background-color: #f5f5f5;
}

// card li-element for projects, events, and other card-style content.
.link-card {
  display: block; 
  text-decoration: none; 
  color: black;
}

.link-card:hover {
  display: block; 
  text-decoration: none; 
  color: black;
  background-color: #f9f9f9;
}

hr {
  background: #ccc;
}

p {
  margin-bottom: 0.5rem;
}

